fix accordion icon overflow

--- a/webapp/src/view/chart-wizard/style.scss
+++ b/webapp/src/view/chart-wizard/style.scss
@@ -22,13 +22,15 @@
 
   h2 {
     background: #fff;
-    padding: 5px 10px;
+    padding: 5px 35px 5px 10px;
     margin: 0;
     font-size: 16px;
     cursor: pointer;
+    position: relative;
 
     .fa {
-      float: right;
+      position: absolute;
+      right: 10px;
       font-size: 20px;
       line-height: 28px;
     }
